Migrate code to Magnesium SR1
Temporary disable checkstyle and spotbugs until they are all resolved.

Change-Id: I49ee729c0fb1c64c4e3fa15f5b28fed0dd0efeb8
Signed-off-by: Donald Hunter <donaldh@cisco.com>
Signed-off-by: santanude <santanu.de@xoriant.com>
Signed-off-by: Donald Hunter <donaldh@cisco.com>